Added automatic tab rotation
Added automatic tab rotation using rotate rate. In this way the pages are not reloaded avoiding the annoying initial page refresh effect. Pages should be refreshed via AJAX.

Updated to materialize.js to v1.0.0-beta.

--- a/windows/setup.html
+++ b/windows/setup.html
@@ -80,7 +80,7 @@
                <option value="rotate">Rotate</option>
             </select>
           </div>
-          <div class="col disabled s2 rotate-rate">
+          <div class="col s2 rotate-rate">
             <label for="rotate-rate">Rotate Rate (seconds)</label>
             <input id="rotate-rate" type="text" value="30">
           </div>
