--- a/windows/browser.html
+++ b/windows/browser.html
@@ -27,7 +27,8 @@
     <link type="text/css" rel="stylesheet" href="../css/browser.css"  media="screen,projection"/>
     <script language="javascript" type="text/javascript" src="../www/js/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="../www/js/moment.js"></script>
-    <script language="javascript" type="text/javascript" src="../www/js/materialize.min.js"></script>
+    <!--script language="javascript" type="text/javascript" src="../www/js/materialize.min.js"></script-->
+    <script language="javascript" type="text/javascript" src="../www/js/materialize.js"></script>
     <script language="javascript" type="text/javascript" src="../js/browser.js"></script>
   </head>
   <body>
