Add custom request headers
Ability to add custom request headers  to all requests

--- a/windows/setup.html
+++ b/windows/setup.html
@@ -149,6 +149,12 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="input-field col s12">
+          <h4>Custom headers <button class="btn waves-effect" id="add_header">Add header</button></h4>
+          <ul id="headers"></ul>
+          </div>
+        </div>
 
         <div class="row">
           <div class="col s12">
