Let WSC Listen on all interfaces
Let WSC Listen on all interfaces

--- a/windows/setup.html
+++ b/windows/setup.html
@@ -193,6 +193,7 @@
           <div class="col s11">
             <label for="host">Host</label>
              <select id="host" class="browser-default">
+              <option value="0.0.0.0">all - 0.0.0.0</option>
               <option value="127.0.0.1">lo - 127.0.0.1</option>
             </select>
           </div>
