--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,35 @@
               </div>
             </div>
 
+            <div class="row">
+              <div class="input-field col s12">
+                <strong>Custom headers
+                  <button class="btn waves-effect" id="add_header">Add header</button>
+                </strong>
+                <ul id="headers"></ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col s12">
+                <input type="checkbox" id="remote-schedule" />
+                <label for="remote-schedule">Remote Schedule Server</label>
+              </div>
+            </div>
+            <div class="row remote-schedule-detail disabled">
+              <div class="input-field col s12">
+                <input id="remote-schedule-url" type="text">
+                <label for="remote-schedule-url">Schedule URL (must start with http:// or https://)</label>
+              </div>
+              <div class="col input-field s2">
+                <input id="schedule-poll-interval" type="number" step="0.1" value="15">
+                <label for="schedule-poll-interval">Schedule Poll Interval</label>
+              </div>
+              <div class="col input-field s2">
+                <label>minutes</label>
+              </div>
+            </div>
+
           </p>
           <p>
             <strong>Remote Administration:</strong><br>
@@ -75,6 +104,7 @@
                 <label for="username">Username</label>
               </div>
             </div>
+
             <div class="row">
               <div class="input-field col s6">
                 <input id="password" type="password">
@@ -86,11 +116,11 @@
               </div>
             </div>
 
-          <div class="row">
-            <a class="btn waves-effect" id="save">Save</a>
+            <div class="row">
+              <a class="btn waves-effect" id="save">Save</a>
 
-            <a class="btn waves-effect red tooltip" id="restart" style="float:right" data-position="left">Restart</a>
-          </div>
+              <a class="btn waves-effect red tooltip" id="restart" style="float:right" data-position="left">Restart</a>
+            </div>
 
           </p>
 
