--- a/www/index.html
+++ b/www/index.html
@@ -65,6 +65,20 @@
               </div>
             </div>
 
+            <div class="row disabled multiple-url-mode">
+              <div class="col s5">
+                <label for="multiple-url-mode">Multiple URL Mode</label>
+                 <select id="multiple-url-mode">
+                   <option value="tabs">Tabs</option>
+                   <option value="rotate">Rotate</option>
+                </select>
+              </div>
+              <div class="col s2 rotate-rate">
+                <label for="rotate-rate">Rotate Rate (seconds)</label>
+                <input id="rotate-rate" type="text" value="30">
+              </div>
+            </div>
+
             <div class="row">
               <div class="input-field col s12">
                 <strong>Custom headers
