--- a/www/index.html
+++ b/www/index.html
@@ -81,6 +81,20 @@
 
             <div class="row">
               <div class="input-field col s12">
+                <input id="useragent" type="text">
+                <label for="url">Override User Agent</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="authorization" type="text">
+                <label for="url">Override Authorization Header</label>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="input-field col s12">
                 <strong>Custom headers
                   <button class="btn waves-effect" id="add_header">Add header</button>
                 </strong>
