Added ability to remove tabs labels
Added ability to remove tabs labels: check 'Hide Tabs Labels'

--- a/windows/setup.html
+++ b/windows/setup.html
@@ -135,6 +135,10 @@
             <input type="checkbox" id="hidegslidescontrols" />
             <label for="hidegslidescontrols">Hide Google Slides Controls</label>
           </div>
+          <div class="col s3">
+            <input type="checkbox" id="hidetabslabels" />
+            <label for="hidetabslabels">Hide Tabs Labels</label>
+          </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
